// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding html plugin to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "E:\\\\Projects\\\\ReactWay\\\\webpack-builder\\\\packages\\\\webpack-builder-plugin-html\\\\src\\\\__tests__\\\\test-project\\\\dist",
    "publicPath": "./",
  },
  "plugins": Array [
    HtmlWebpackPlugin {
      "options": Object {
        "appMountIds": Array [
          "root",
        ],
        "baseHref": "/",
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": false,
        "meta": Array [
          Object {
            "content": "width=device-width, initial-scale=1",
            "name": "viewport",
          },
        ],
        "minify": false,
        "showErrors": true,
        "template": "E:\\\\Projects\\\\ReactWay\\\\webpack-builder\\\\common\\\\temp\\\\node_modules\\\\.registry.npmjs.org\\\\html-webpack-template\\\\6.2.0\\\\html-webpack-plugin@3.2.0\\\\node_modules\\\\html-webpack-template\\\\index.ejs",
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
}
`;

exports[`Adding html plugin with options to configuration 1`] = `
Object {
  "entry": "./src/index.ts",
  "mode": "development",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "E:\\\\Projects\\\\ReactWay\\\\webpack-builder\\\\packages\\\\webpack-builder-plugin-html\\\\src\\\\__tests__\\\\test-project\\\\dist",
    "publicPath": "./",
  },
  "plugins": Array [
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": Object {},
        "minify": false,
        "showErrors": true,
        "template": "E:\\\\Projects\\\\ReactWay\\\\webpack-builder\\\\common\\\\temp\\\\node_modules\\\\.registry.npmjs.org\\\\html-webpack-plugin\\\\3.2.0\\\\node_modules\\\\html-webpack-plugin\\\\default_index.ejs",
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
}
`;
